--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
-  "name": "angular-xeditable",
+  "name": "angular-xeditable-ext",
   "version": "0.1.8",
   "description": "Edit in place for AngularJS",
-  "author": "https://github.com/vitalets",
+  "author": "https://github.com/Mcafee123",
   "license": "MIT",
-  "homepage": "http://vitalets.github.io/angular-xeditable",
+  "homepage": "https://github.com/Mcafee123/angular-xeditable",
   "main": [
     "dist/css/xeditable.css",
     "dist/js/xeditable.js"
