--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-xeditable",
+  "name": "angular-xeditable-ext",
   "description": "Edit-in-place for angular.js",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "homepage": "https://vitalets.github.io/angular-xeditable",
   "author": {
     "name": "Vitaliy Potapov",
